# C.Shark

./: .gitignore  README.md  conda_setup.sh  full_chrom_KO.sh  pyproject.toml  train.sh  train_ae.sh
examples/: 5kb_example.ipynb  5kb_predict_1d_tracks_example.ipynb  5kb_predict_1d_tracks_example_mouse.ipynb  diploid_example.ipynb  loop_roc_example.ipynb  motif_reverse_example.ipynb  perturb_example.ipynb  predict_1d_tracks_example.ipynb  screen_example.ipynb  seq_shuffle_example.ipynb  sequence_perturb.sh  snp_example.ipynb  train_example.ipynb
images/src/cshark/data/: chromosome_dataset.py  genome_dataset.py
images/src/cshark/training/: train.py
src/cshark/data/: chromosome_dataset.py  data_feature.py  genome_dataset.py
src/cshark/inference/: ctcf.py  loop_roc.py  perturb.py  seq_perturb.py  tracks_files.py
src/cshark/inference/utils/: inference_utils.py  model_utils.py  plot_utils.py
src/cshark/model/: blocks.py  corigami_models.py
src/cshark/preprocessing/: bigwig_ko.py  convert_to_cooler.py  cooler_remap.py  cooler_uniform_bins.py  cooler_unify_anchors.py  normalize_bigwig.py
src/cshark/training/: train.py
